--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,7 @@
         android:theme="@style/Theme.ProSoft24"
         tools:targetApi="31">
         <activity
-            android:name=".hw2.SecondActivity"
-            android:exported="false" />
-        <activity
-            android:name=".hw2.MainActivity"
+            android:name=".hw3.ProfileActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,6 +21,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".hw2.SecondActivity"
+            android:exported="false" />
+        <activity
+            android:name=".hw2.MainActivity"
+            android:exported="false" />
 
         <meta-data
             android:name="preloaded_fonts"
